--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "esp-led"
+name = "esp-rs-demo"
 version = "0.1.0"
 authors = ["WuFengSheng <469742978@qq.com>"]
 edition = "2021"
